# switchboardv2-vrf-example

./: .gitignore  Anchor.toml  README.md
app/: README.md  package.json  tsconfig.json
app/src/: app.ts  usecase.ts  utils.ts
app/src/idl/: common.ts  switchboardv2_vrf_example.ts
programs/switchboardv2-vrf-example/: Cargo.toml
programs/switchboardv2-vrf-example/src/: lib.rs
tests/: switchboardv2-vrf-example.ts
